--- a/index.html
+++ b/index.html
@@ -6,76 +6,14 @@
   <link rel="stylesheet" type="text/css" href="styles.css" media="screen"/>
 </head>
 <body>
-  <div class="desktop-version">
     <div id="videoBox">
         <a href="#"  id="closeButton">X</a>
          <h1 id="title"></h1> 
         <iframe id="mainvideo" width="720" height="480" frameborder="0" src="" allowfullscreen></iframe>
     </div>
-    <div id="chart_wrap"><div id="chart_div">
-      
+    <div id="chart_wrap">
+      <div id="chart_div"></div>
     </div>
-    </div>
-</div>
-  <div class="mobile-version">
-    <details>
-      <summary>One Lagoon</summary>
-      <details>
-        <summary>Water Quality</summary>
-        <a class="mobile-item" href="#">Contaminants</a>
-        <a class="mobile-item" href="#">Atmospheric Deposition</a>
-        <a class="mobile-item" href="#">Legacy Loads</a>
-        <a class="mobile-item" href="#">Hydrology</a>
-        <a class="mobile-item" href="#">Stormwater</a>
-        <a class="mobile-item" href="#">Wastewater</a>
-        <a class="mobile-item" href="#">Impaired Waters</a>
-      </details>
-      <details>
-        <summary>Habitats</summary>
-        <a class="mobile-item" href="#">Seagrasses</a>
-        <a class="mobile-item" href="#">Filter Feeders</a>
-        <a class="mobile-item" href="#">Living Shorelines</a>
-        <a class="mobile-item" href="#">Wetlands</a>
-        <a class="mobile-item" href="#">Spoil Islands</a>
-        <a class="mobile-item" href="#">Land Conservation</a>
-        <a class="mobile-item" href="#">Connected Waters</a>
-      </details>
-      <details>
-        <summary>Living Resources</summary>
-        <a class="mobile-item" href="#">Biodiversity</a>
-        <a class="mobile-item" href="#">Species of Concern</a>
-        <a class="mobile-item" href="#">Exotic & Invasive</a>
-        <a class="mobile-item" href="#">Forage Fishes</a>
-        <a class="mobile-item" href="#">Fisheries</a>
-        <a class="mobile-item" href="#">Harmful Algal Blooms</a>
-      </details>
-    </details>
-    <details>
-      <summary>One Voice</summary>
-      <details>
-        <summary>Communicate - Collaborate - Coordinate</summary>
-        <a class="mobile-item" href="">CCMP Implementation & Financing</a>
-        <a class="mobile-item" href="">State of the Lagoon</a>
-        <a class="mobile-item" href="">Monitoring & Data</a>
-        <a class="mobile-item" href="">Science & Technology Innovation</a>
-        <a class="mobile-item" href="">Policy Considerations</a>
-        <a class="mobile-item" href="">Citizen Engagement</a>
-      </details>
-    </details>
-    <details>
-      <summary>One Community</summary>
-      <details>
-        <summary>Healthy Communities</summary>
-        <a class="mobile-item" href="">Climate Ready Estuaries</a>
-        <a class="mobile-item" href="">Trash Free Waters</a>
-        <a class="mobile-item" href="">Marinas & Boating</a>
-        <a class="mobile-item" href="">Distinctive Lagoon Communities</a>
-        <a class="mobile-item" href="">21st Century Coastal Communities</a>
-        <a class="mobile-item" href="">Emergency Response</a>
-      </details>
-  
-  
-  </div>
   <script src="https://code.jquery.com/jquery-1.8.3.min.js"></script>
   <script type="text/javascript" src="https://www.gstatic.com/charts/loader.js"></script> 
   <script type="text/javascript" src="script.js"></script>
